# LD33

./: CMakeLists.txt  README.md  emscripten_build.bat
data/sprites/: base.piskel  explosion.piskel  eye_to_hand.piskel  heli.piskel  missile.piskel
src/: Animation.cpp  Animation.h  Helicopters.cpp  Helicopters.h  Layers.h  Missiles.cpp  Missiles.h  MyAssets.cpp  MyAssets.h  MyGame.cpp  MyGame.h  main.cpp
src/entities/: HUD.cpp  HUD.h  Helicopter.cpp  Helicopter.h  Missile.cpp  Missile.h  Monster.cpp  Monster.h
src/sysent_setup/: entities.h
